add registration and login interface

--- a/view/index.html
+++ b/view/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <h1>Realtime Chat</h1>
-    <div id="messages"></div>
-    <input id="input" type="text" placeholder="Type a message...">
+    <div class="container">
+        <h1>Realtime Chat</h1>
+        <div id="messages"></div>
+        <input id="input" type="text" placeholder="Type a message...">
+    </div>
 
-    <script type="module" src="asset/js/connected.js"></script>
+    <script type="module" src="asset/js/connection.js"></script>
     <script type="module" src="asset/js/messageSent.js"></script>
 
 </body>
