--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -1,16 +1,246 @@
-body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
+* {
+    line-height: 1.5;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    outline-color: #17A9FD;
+    font-family: Inter;
+    -webkit-tap-highlight-color: transparent;
+}
+
+::selection {
+    background-color: #17A9FD;
+    color: #fff;
+}
+
+html {
+    height: 100vh;
+    height: 100svh;
+    width: 100%;
+
+    body {
+        /* font-family: Arial, sans-serif; */
+        font-size: 16px;
+        height: 100%;
+    }
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
 }
 
 #messages {
     border: 1px solid #ccc;
     height: 300px;
-    overflow-y: scroll;
+    width: 100%;
+    overflow-y: auto;
     padding: 10px;
 }
 
 #input {
     width: 100%;
     font-size: 16px;
+}
+
+/* form login*/
+.container-login {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    background-color: #eef5fd;
+    /* background-color: #fff; */
+
+    form:hover {
+        box-shadow: 5px 5px 15px #00000022;
+    }
+
+    form {
+        background-color: #f0f9ff;
+        width: 100%;
+        max-width: 400px;
+        padding: 30px;
+        display: grid;
+        place-items: center;
+        grid-template-columns: 1;
+        gap: 25px;
+        border-radius: 30px;
+        box-shadow: 5px 5px 15px #00000012;
+        transition: .3s all;
+
+        img {
+            max-width: 200px;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .box-input {
+            width: 100%;
+            padding: 16px;
+            background-color: #fff;
+            border-radius: 20px;
+            display: grid;
+            place-items: left;
+            box-shadow: 0 0 20px #00000012;
+            gap: 5px;
+
+            div {
+                display: grid;
+                place-items: center;
+                grid-template-columns: auto 1fr;
+                gap: 10px;
+
+                input {
+                    width: 100%;
+                    padding: 5px 5px 5px 5px;
+                    font-size: 16px;
+                    border: unset;
+                    background-color: transparent;
+                    border-radius: 10px;
+                }
+
+                i {
+                    margin-bottom: -2px;
+                    color: #888;
+                }
+            }
+        }
+
+        button:hover {
+            background-color: #0165E1;
+            content: 'haha';
+        }
+
+        button {
+            font-size: 16px;
+            height: 45px;
+            width: 100%;
+            border: unset;
+            cursor: pointer;
+            border-radius: 20px;
+            background-color: #17A9FD;
+            font-weight: bold;
+            color: #fff;
+            transition: .3s all;
+        }
+
+        .option {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            a {
+                text-decoration: unset;
+                color: #17A9FD99;
+                font-size: 12px;
+            }
+        }
+    }
+}
+
+/* form register*/
+.container-register {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    background-color: #eef5fd;
+    /* background-color: #fff; */
+
+    form:hover {
+        box-shadow: 5px 5px 15px #00000022;
+    }
+
+    form {
+        background-color: #f0f9ff;
+        width: 100%;
+        max-width: 400px;
+        padding: 30px;
+        display: grid;
+        place-items: center;
+        grid-template-columns: 1;
+        gap: 25px;
+        border-radius: 30px;
+        box-shadow: 5px 5px 15px #00000012;
+        transition: .3s all;
+
+        img {
+            max-width: 200px;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .box-input {
+            width: 100%;
+            padding: 16px;
+            background-color: #fff;
+            border-radius: 20px;
+            display: grid;
+            place-items: left;
+            box-shadow: 0 0 20px #00000012;
+            gap: 5px;
+
+            /* div:nth-child(3) {
+                margin-top: 6px;
+            } */
+
+            div {
+                display: grid;
+                place-items: center;
+                grid-template-columns: auto 1fr;
+                gap: 10px;
+
+                input {
+                    width: 100%;
+                    padding: 5px 5px 5px 8px;
+                    font-size: 16px;
+                    border: unset;
+                    background-color: transparent;
+                    border-radius: 10px;
+                }
+
+                i {
+                    margin-bottom: -2px;
+                    color: #888;
+                }
+            }
+        }
+
+        button:hover {
+            background-color: #0165E1;
+            content: 'haha';
+        }
+
+        button {
+            font-size: 16px;
+            height: 45px;
+            width: 100%;
+            border: unset;
+            cursor: pointer;
+            border-radius: 20px;
+            background-color: #17A9FD;
+            font-weight: bold;
+            color: #fff;
+            transition: .3s all;
+        }
+
+        .option {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a {
+                text-decoration: unset;
+                color: #17A9FD99;
+                font-size: 12px;
+            }
+        }
+    }
 }
