--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -3,13 +3,14 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    outline-color: #17A9FD;
+    outline-color: #0099ff;
     font-family: Inter;
     -webkit-tap-highlight-color: transparent;
+    scroll-behavior: smooth;
 }
 
 ::selection {
-    background-color: #17A9FD;
+    background-color: #0099ff;
     color: #fff;
 }
 
@@ -18,6 +19,10 @@ html {
     height: 100svh;
     width: 100%;
     overflow-y: auto;
+
+    .dark {
+        background-color: #000;
+    }
 
     body {
         font-size: 16px;
@@ -40,14 +45,10 @@ input[type="password"]::-ms-clear {
     padding: 10px;
     background-color: #eef5fd;
     object-fit: cover;
-    gap: 20px;
-    flex-basis: 1;
 
     .navigation {
-        padding: 10px 10px 20px 10px;
-        /* background-color: #f0f9ff; */
-        background-color: #ffffff;
-        border-radius: 30px;
+        background-color: #fff;
+        border-radius: 16px;
         box-shadow: 5px 5px 15px #00000012;
         max-width: 400px;
         width: 100%;
@@ -55,17 +56,23 @@ input[type="password"]::-ms-clear {
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        padding: 0 0 10px 0;
+        margin-right: 10px;
 
         .wrapper {
-            padding: 10px;
+            padding: 20px;
             height: fit-content;
         }
 
+        .wrapper-list::-webkit-scrollbar {
+            display: none;
+        }
+
         .wrapper-list {
-            margin-top: 20px;
-            /* padding: 0px 5px 5px 5px; */
             flex: 1;
             overflow-y: scroll;
+            -ms-overflow-style: none;  /* IE và Edge */
+            scrollbar-width: none;  /* Firefox */
         }
 
         .wrapper,
@@ -92,7 +99,7 @@ input[type="password"]::-ms-clear {
 
                 i {
                     font-size: 20px;
-                    color: #17A9FD;
+                    color: #0099ff;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -124,6 +131,7 @@ input[type="password"]::-ms-clear {
                     right: 0;
                     border-radius: 50%;
                     padding: 5px;
+                    display: none;
                 }
             }
 
@@ -131,12 +139,12 @@ input[type="password"]::-ms-clear {
                 display: flex;
                 justify-content: start;
                 align-items: center;
-                height: 40px;
+                height: 35px;
                 width: 100%;
                 gap: 10px;
 
                 .active {
-                    color: #17A9FD;
+                    color: #0099ff;
                     background-color: #eef5fd;
                 }
 
@@ -146,7 +154,7 @@ input[type="password"]::-ms-clear {
                 }
 
                 div:active {
-                    height: 40px;
+                    height: 35px;
                     background-color: transparent;
 
                     .wrapper {
@@ -160,19 +168,27 @@ input[type="password"]::-ms-clear {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    height: 40px;
+                    height: 35px;
                     border-radius: 20px;
 
                     .wrapper {
+                        position: relative;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         padding: 6px 10px 6px 10px;
-                        height: 40px;
+                        height: 35px;
                         width: max-content;
                         cursor: pointer;
                         font-size: 14px;
                         font-weight: 600;
+
+                        user-select: none;
+                        /* Ngăn không cho bôi đen */
+                        -webkit-user-select: none;
+                        /* Dùng cho trình duyệt Safari */
+                        -moz-user-select: none;
+                        /* Dùng cho Firefox */
                     }
                 }
 
@@ -188,51 +204,75 @@ input[type="password"]::-ms-clear {
             .users-list {
                 height: fit-content;
                 width: 100%;
-                display: grid;
-                gap: 6.5px;
+                /* padding: 0 15px 0 10px; */
+                padding: 0 15px 0 10px;
+                display: flex;
+                flex-direction: column;
+                /* row-gap: 8.5px; */
+
+                /* background-color: #0099ff; */
 
                 .active {
-                    background-color: #f0f9ff;
+                    background-color: #0099ff22;
+                }
+
+                .active:hover {
+                    background-color: #0099ff22 !important;
+                    border-radius: unset !important;
+                    /* outline: #0099ff solid 2px; */
+                }
+
+                .active:last-child {
+                    border-radius: 0 0 10px 10px !important;
+                }
+
+                .active:last-child:hover {
+                    border-radius: 0 0 10px 10px !important;
+                }
+
+                .dot {
+                    position: absolute;
+                    content: '';
+                    padding: 5px;
+                    background-color: #0099ff;
+                    right: 15px;
+                    border-radius: 50%;
+                }
+
+                .user:hover {
+                    background-color: #eee;
+                    border-radius: 10px;
                 }
 
                 .user {
-                    height: 61px;
+                    position: relative;
+                    /* box-shadow: inset 0 0 0 1px #000; */
+                    height: 68px;
                     overflow: hidden;
                     display: flex;
                     justify-content: start;
                     align-items: center;
-                    padding: 8px;
-                    /* box-shadow: 0 0 10px #000000; */
-                    /* border: 1px solid #00000012; */
-                    border-radius: 20px;
+                    /* padding: 8px 16px 8px 8px; */
+                    padding: 10px 20px 10px 10px;
+                    /* border-radius: 10px; */
                     gap: 10px;
                     cursor: pointer;
+                    user-select: none;
+                    -webkit-user-select: none;
+                    -moz-user-select: none;
 
                     .user-img {
-                        height: 45px;
-                        width: 45px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        height: 48px;
+                        width: 48px;
+                        background-image: url(../../view/img/user.png);
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-position: center;
                         flex-shrink: 0;
-                        background-color: #17A9FD;
-                        color: #fff;
-                        font-size: 45px;
-                        border-radius: 50%;
-                        overflow: hidden;
-                        padding: 5px;
-
-                        i {
-                            transform: translateY(6px);
-                        }
                     }
 
                     .user-info {
-                        height: 45px;
-                        display: flex;
-                        justify-content: start;
-                        align-items: start;
-                        flex-direction: column;
+
 
                         .user-name {
                             font-weight: 600;
@@ -241,17 +281,11 @@ input[type="password"]::-ms-clear {
                         .latest-msg {
                             max-width: 290px;
                             display: -webkit-box;
-                            /* Sử dụng box model */
                             -webkit-box-orient: vertical;
-                            /* Định hướng chiều dọc */
                             -webkit-line-clamp: 1;
-                            /* Giới hạn chỉ hiển thị một dòng */
                             overflow: hidden;
-                            /* Ẩn nội dung vượt quá */
                             text-overflow: ellipsis;
-                            /* Hiển thị dấu ba chấm */
                             white-space: normal;
-                            /* Cho phép xuống dòng nếu cần thiết */
                         }
                     }
                 }
@@ -266,11 +300,11 @@ input[type="password"]::-ms-clear {
         display: flex;
         justify-content: center;
         align-items: center;
-        /* padding: 10px; */
         background-color: #eef5fd;
         background-color: #ffffff;
         box-shadow: 5px 5px 15px #00000012;
-        border-radius: 30px;
+        border-radius: 16px;
+        margin-left: 10px;
 
         .wrapper {
             padding: 15px;
@@ -288,11 +322,31 @@ input[type="password"]::-ms-clear {
                 height: 55px;
                 display: flex;
                 justify-content: start;
-                align-items: start;
+                align-items: center;
 
-                .user:hover{
+                #back:hover {
                     background-color: #f0f9ff;
+
                 }
+
+                #back {
+                    color: #0099ff;
+                    font-size: 20px;
+                    height: 40px;
+                    width: 40px;
+                    display: none;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 50%;
+                    flex-shrink: 0;
+                    cursor: pointer;
+                    transition: all .2s;
+                }
+
+                .user:hover {
+                    background-color: #eee;
+                }
+
                 .user {
                     height: 100%;
                     overflow: hidden;
@@ -301,26 +355,25 @@ input[type="password"]::-ms-clear {
                     align-items: center;
                     padding: 8px 12px 8px 8px;
                     background-color: transparent;
-                    border-radius: 20px;
+                    border-radius: 10px;
                     gap: 10px;
                     cursor: pointer;
 
-                    .user-img {
-                        height: 40px;
-                        width: 40px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        flex-shrink: 0;
-                        background-color: #17A9FD;
-                        color: #fff;
-                        font-size: 40px;
-                        border-radius: 50%;
-                        overflow: hidden;
+                    user-select: none;
+                    /* Ngăn không cho bôi đen */
+                    -webkit-user-select: none;
+                    /* Dùng cho trình duyệt Safari */
+                    -moz-user-select: none;
+                    /* Dùng cho Firefox */
 
-                        i {
-                            transform: translateY(6px);
-                        }
+                    .user-img {
+                        height: 45px;
+                        width: 45px;
+                        background-image: url(../../view/img/user.png);
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        flex-shrink: 0;
                     }
 
                     .user-info {
@@ -339,11 +392,11 @@ input[type="password"]::-ms-clear {
                             content: '';
                             height: 8px;
                             width: 8px;
-                            background-color: green;
+                            background-color: #00bb00;
                             position: absolute;
                             border-radius: 50%;
                             left: 0;
-                            bottom: -3px;
+                            bottom: 0;
                             border: 2px solid #fff;
                             transform: translateX(-23px);
                         }
@@ -376,8 +429,8 @@ input[type="password"]::-ms-clear {
                         display: flex;
                         /* justify-content: center; */
                         align-items: center;
-                        
-                        .msg-content{
+
+                        .msg-content {
                             max-width: 85%;
                             background-color: #eee;
                             border-radius: 20px;
@@ -385,15 +438,17 @@ input[type="password"]::-ms-clear {
 
                         }
                     }
-                    .sent{
+
+                    .sent {
                         justify-content: flex-end;
 
-                        .msg-content{
-                            background-color: #17A9FD;
+                        .msg-content {
+                            background-color: #0099ff;
                             color: #fff;
                         }
                     }
-                    .received{
+
+                    .received {
                         justify-content: flex-start;
                     }
                 }
@@ -423,14 +478,15 @@ input[type="password"]::-ms-clear {
                     /* #button-show:hover {
                         animation: rotate .3s ease-in-out forwards;
                     } */
-                    #button-show.active{
+                    #button-show.active {
                         transform: rotate(45deg);
                         transition: all .3s;
-                        background-color: #17A9FD;
+                        background-color: #0099ff;
                         color: #f0f9ff;
                     }
+
                     i {
-                        color: #17A9FD;
+                        color: #0099ff;
                         font-size: 20px;
                         background-color: #f0f9ff;
                         height: 40px;
@@ -444,10 +500,11 @@ input[type="password"]::-ms-clear {
                         transition: all .2s;
                     }
 
-                    #more.active{
+                    #more.active {
                         display: flex;
                         transition: all .5s;
                     }
+
                     #more {
                         display: none;
                         justify-content: center;
@@ -490,7 +547,7 @@ input[type="password"]::-ms-clear {
                     flex-shrink: 0;
 
                     ion-icon {
-                        color: #17A9FD;
+                        color: #0099ff;
                         height: 25px;
                         width: 25px;
                     }
@@ -500,11 +557,12 @@ input[type="password"]::-ms-clear {
     }
 }
 
-@keyframes rotate{
-    0%{
+@keyframes rotate {
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(45deg);
     }
 
@@ -654,7 +712,7 @@ input[type="password"]::-ms-clear {
                 border: unset;
                 cursor: pointer;
                 border-radius: 20px;
-                background-color: #17A9FD;
+                background-color: #0099ff;
                 font-weight: bold;
                 color: #fff;
                 transition: .3s all;
@@ -668,7 +726,7 @@ input[type="password"]::-ms-clear {
 
                 a {
                     text-decoration: unset;
-                    color: #17A9FD99;
+                    color: #0099ff99;
                     font-size: 12px;
                 }
             }
@@ -793,7 +851,7 @@ input[type="password"]::-ms-clear {
                 border: unset;
                 cursor: pointer;
                 border-radius: 20px;
-                background-color: #17A9FD;
+                background-color: #0099ff;
                 font-weight: bold;
                 color: #fff;
                 transition: .3s all;
@@ -807,7 +865,7 @@ input[type="password"]::-ms-clear {
 
                 a {
                     text-decoration: unset;
-                    color: #17A9FD99;
+                    color: #0099ff99;
                     font-size: 12px;
                 }
             }
@@ -815,12 +873,42 @@ input[type="password"]::-ms-clear {
     }
 }
 
-@media (max-width: 390px) {
-    .container-home {
-        .navigation {
-            display: none;
-        }
+@media (max-width: 768px) {
+    body {
+        width: 100%;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
 
-        .main {}
+        .container-home {
+            width: 200%;
+            display: flex;
+            overflow: hidden;
+
+            .navigation {
+                max-width: 100%;
+
+                .wrapper-list{
+
+                    .users-list{
+                        padding: 0 10px;
+                    }
+                }
+            }
+            
+            .main {
+                max-width: 100%;
+
+                .wrapper{
+                    padding: 10px;
+
+                    .title{
+
+                        #back{
+                            display: flex;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
