--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -22,11 +22,13 @@ html {
 
     .dark {
         background-color: #000;
+        background-color: #eef5fd;
     }
 
     body {
         font-size: 16px;
         height: 100%;
+        position: relative;
     }
 }
 
@@ -71,8 +73,10 @@ input[type="password"]::-ms-clear {
         .wrapper-list {
             flex: 1;
             overflow-y: scroll;
-            -ms-overflow-style: none;  /* IE và Edge */
-            scrollbar-width: none;  /* Firefox */
+            -ms-overflow-style: none;
+            /* IE và Edge */
+            scrollbar-width: none;
+            /* Firefox */
         }
 
         .wrapper,
@@ -212,15 +216,15 @@ input[type="password"]::-ms-clear {
 
                 /* background-color: #0099ff; */
 
-                
+
                 .active:last-child {
                     border-radius: 0 0 10px 10px !important;
                 }
-                
+
                 .active:last-child:hover {
                     border-radius: 0 0 10px 10px !important;
                 }
-                
+
                 .dot {
                     position: absolute;
                     content: '';
@@ -229,7 +233,7 @@ input[type="password"]::-ms-clear {
                     right: 15px;
                     border-radius: 50%;
                 }
-                
+
                 .user:hover {
                     background-color: #eee;
                     border-radius: 10px;
@@ -556,6 +560,162 @@ input[type="password"]::-ms-clear {
             }
         }
     }
+
+    .sidebar {
+        position: absolute;
+        top: 10px;
+        left: -100%;
+        bottom: 10px;
+        overflow: hidden;
+        z-index: 1;
+        /* background-color: #eef5fd; */
+        /* padding: 10px; */
+        /* display: none; */
+        /* animation: slideRight .5s forwards ease-in-out; */
+
+        .wrapper {
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            border-radius: 16px;
+            /* box-shadow: 5px 5px 15px #00000012; */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 0 0 16px 0;
+            position: relative;
+
+            .fa-xmark:hover {
+                background-color: #eee;
+            }
+
+            .fa-xmark {
+                position: absolute;
+                height: 40px;
+                width: 40px;
+                top: 16px;
+                right: 16px;
+                border-radius: 50%;
+                font-size: 20px;
+                color: #0099ff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+            }
+
+            .user-profile {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                gap: 20px;
+                padding: 40px 20px 20px;
+
+                .user-img {
+
+                    img {
+                        width: 100%;
+                        max-width: 120px;
+                    }
+                }
+
+                .user-fullname {
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+            }
+
+            .nav-link {
+                height: 100%;
+                width: 100%;
+                overflow-y: auto;
+
+
+                .nav-scroll {
+                    padding: 16px 16px 0 16px;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-direction: column;
+                    /* gap: 10px; */
+
+                    gap {
+                        flex: 1;
+                    }
+
+                    div:hover {
+                        background-color: #0099ff22;
+                    }
+
+                    div {
+                        /* height: 50px; */
+                        width: 100%;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        /* background-color: #e7f1fd;
+                        border-radius: 10px; */
+                        padding: 16px;
+                        gap: 10px;
+                        font-weight: 500;
+                        cursor: pointer;
+
+                        i {
+                            color: #0099ff;
+                            font-size: 20px;
+                            width: 35px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                        .fa-chevron-right {
+                            flex: 1;
+                            justify-content: flex-end;
+                            opacity: 0.6;
+                        }
+                    }
+
+                    div:last-child {
+                        /* margin-top: 100%; */
+                    }
+                }
+            }
+        }
+    }
+
+    .sidebar.active {
+        animation: slideLeft .5s forwards ease-out;
+    }
+
+    .sidebar.deactive {
+        animation: slideRight .5s forwards ease-in;
+    }
+
+    .shadow {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: #00000089;
+        display: none;
+        opacity: 0;
+    }
+
+    .shadow.active {
+        animation: inOpacity .5s forwards ease-out;
+    }
+
+    .shadow.deactive {
+        animation: deOpacity .5s forwards ease-in;
+    }
+
 }
 
 @keyframes rotate {
@@ -568,6 +728,51 @@ input[type="password"]::-ms-clear {
     }
 
 }
+
+@keyframes slideLeft {
+    0% {
+        left: -100%;
+        right: 100%;
+    }
+
+    100% {
+        left: 10px;
+        right: 10px;
+    }
+}
+
+@keyframes slideRight {
+    0% {
+        left: 10px;
+        right: 10px;
+    }
+
+    100% {
+        left: -100%;
+        right: 100%;
+    }
+}
+
+@keyframes inOpacity {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes deOpacity {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 
 #messages {
     border: 1px solid #ccc;
@@ -888,36 +1093,40 @@ input[type="password"]::-ms-clear {
             .navigation {
                 max-width: 100%;
 
-                .wrapper-list{
+                .wrapper-list {
 
-                    .users-list{
+                    .users-list {
                         padding: 0 10px;
 
-                        .active:hover{
+                        .active:hover {
                             background-color: #eee;
                             border-radius: 10px;
                         }
 
-                        .active{
+                        .active {
                             background-color: transparent;
                         }
                     }
                 }
             }
-            
+
             .main {
                 max-width: 100%;
 
-                .wrapper{
+                .wrapper {
                     padding: 10px;
 
-                    .title{
+                    .title {
 
-                        #back{
+                        #back {
                             display: flex;
                         }
                     }
                 }
+            }
+
+            .sidebar {
+                max-width: unset;
             }
         }
     }
